--- a/locales/fr.schema.json
+++ b/locales/fr.schema.json
@@ -801,7 +801,7 @@
         }
       },
       "presets": {
-        "name": "Collection en vedette"
+        "name": "Collection Test"
       }
     },
     "featured-collection": {
